# music-vibes

./: .gitattributes  Cargo.toml  README.md
src/: gui.rs  main.rs  settings.rs  tui.rs  util.rs
